--- a/Identikit/Views/Account/LoginPage.cshtml
+++ b/Identikit/Views/Account/LoginPage.cshtml
@@ -5,24 +5,54 @@
 
 <!DOCTYPE html>
 
-<html>
+<html style="width: 100%; height: 100%;">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>LoginPage</title>
+    @Styles.Render(Identikit.Constants.BootstrapBundle)
 </head>
-<body>
-    <div class="row"> 
-        <div class="col-md-offset-2 col-md-8">
-            @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-            {
-                @Html.LabelFor(m => m.Login)
-                @Html.TextBoxFor(m => m.Login)
-                @Html.LabelFor(m => m.Password)
-                @Html.TextBoxFor(m => m.Password)
-                @Html.CheckBoxFor(m => m.RememberMe)
-                <input  type="submit" value="Login"/>
-            }
-        </div>
+<body style="width: 100%; height: 100%;">
+    <div class="center-wrapper" style="display: flex; align-items: center; justify-content: center; height: 100%; padding-bottom: 5%;">
+        @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "col-md-8" }))
+        {
+            <table style="margin: 0 auto;" cellpadding="8">
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Login)
+                    </td>
+                    <td>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            @Html.TextBoxFor(m => m.Login, new { @class = "form-control"})
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Password)
+                    </td>
+                    <td>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.RememberMe)
+                    </td>
+                    <td>
+                        @Html.CheckBoxFor(m => m.RememberMe)
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                       <input type="submit" value="Login" class="btn btn-info" style="max-width: 100%; width: 100%; color: #000;" />
+                    </td>
+                </tr>
+            </table>
+        }
     </div>
 </body>
 </html>
