--- a/Identikit/Views/Home/Index.cshtml
+++ b/Identikit/Views/Home/Index.cshtml
@@ -1,17 +1,6 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Layout.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div> 
-        Hello you 
-    </div>
-</body>
-</html>
+<div> 
+    Hello you 
+</div>
